select on click

--- a/todo-list.html
+++ b/todo-list.html
@@ -14,7 +14,7 @@
        <input type="text" id="todo-list" maxlength="15" placeholder="type here..">
        <button type="submit" id="list-btn">Send</button>
        <div class="selectDiv">
-         <select id="my-select" for="mySelect">
+         <select name="doList" class="my-select">
            <option value="all">all</option>
            <option value="completed">completed</option>
            <option value="uncompleted">uncompleted</option>
