--- a/calculator.html
+++ b/calculator.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <title>Calculator</title>
-<link rel="icon" type="image/x-icon" href="favicon.jpg">
+<link rel="icon" type="image/x-icon" href="auge1.jpg">
 <meta name="viewport" content="width=device-width,initial-scale=1.0">
 <script src="https://kit.fontawesome.com/821e790606.js" crossorigin="anonymous"></script>
 <link rel="stylesheet" href="calculator.css">
